--- a/libs/job/inverse.scss
+++ b/libs/job/inverse.scss
@@ -173,3 +173,32 @@ figure figcaption {
   margin-bottom: 1rem;
 }
 
+.darkred{ color: $darkred;}
+.red{ color: $red;}
+.lightred{ color: $lightred;}
+
+.darkorange{ color: $darkorange;}
+.orange{ color: $orange;}
+.lightorange{ color: $lightorange;}
+
+.darkcerulean{ color: $darkcerulean;}
+.cerulean{ color: $cerulean;}
+.lightcerulean{ color: $lightcerulean;}
+
+.darkblue{ color: $darkblue;}
+.meddarkblue{ color: $meddarkblue;}
+.blue{ color: $blue;}
+.lightblue{ color: $lightblue;}
+
+.darkpurple{ color: $darkpurple;}
+.purple{ color: $purple;}
+.lightpurple{ color: $lightpurple;}
+
+.darkmagenta{ color: $darkmagenta;}
+.magenta{ color: $magenta;}
+.lightmagenta{ color: $lightmagenta;}
+
+.dark{ color: $dark;}
+.black{ color: $black;}
+.grey{ color: $grey;}
+.lightgrey{ color: $lightgrey;}
